# api/api.yml
@@ -28,6 +28,58 @@ components:
         - Time
         - Valid
       type: object
+    ErrorDetail:
+      additionalProperties: false
+      properties:
+        location:
+          description: Where the error occurred, e.g. 'body.items[3].tags' or 'path.thing-id'
+          type: string
+        message:
+          description: Error message text
+          type: string
+        value:
+          description: The value at the given location
+      type: object
+    ErrorModel:
+      additionalProperties: false
+      properties:
+        $schema:
+          description: A URL to the JSON Schema for this object.
+          example: https://example.com/schemas/ErrorModel.json
+          format: uri
+          readOnly: true
+          type: string
+        detail:
+          description: A human-readable explanation specific to this occurrence of the problem.
+          example: Property foo is required but is missing.
+          type: string
+        errors:
+          description: Optional list of individual error details
+          items:
+            $ref: "#/components/schemas/ErrorDetail"
+          nullable: true
+          type: array
+        instance:
+          description: A URI reference that identifies the specific occurrence of the problem.
+          example: https://example.com/error-log/abc123
+          format: uri
+          type: string
+        status:
+          description: HTTP status code
+          example: 400
+          format: int64
+          type: integer
+        title:
+          description: A short, human-readable summary of the problem type. This value should not change between occurrences of the error.
+          example: Bad Request
+          type: string
+        type:
+          default: about:blank
+          description: A URI reference to human-readable documentation for the error.
+          example: https://example.com/errors/example
+          format: uri
+          type: string
+      type: object
     GetSiteOutputBody:
       additionalProperties: false
       properties:
@@ -71,33 +123,6 @@ components:
         - createdAt
         - updatedAt
         - deletedAt
-      type: object
-    UploadFileInputBody:
-      additionalProperties: false
-      properties:
-        $schema:
-          description: A URL to the JSON Schema for this object.
-          example: https://example.com/schemas/UploadFileInputBody.json
-          format: uri
-          readOnly: true
-          type: string
-        content_type:
-          description: The content type of the file.
-          example: text/plain
-          type: string
-        file:
-          description: The name of the site (e.g. fizzy-buzzy).
-          example: fizzy-buzzy
-          format: base64
-          type: string
-        name:
-          description: The name of the site (e.g. fizzy-buzzy).
-          example: fizzy-buzzy
-          type: string
-      required:
-        - name
-        - file
-        - content_type
       type: object
   securitySchemes:
     openid:
@@ -187,9 +212,6 @@ paths:
             type: string
       requestBody:
         content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/UploadFileInputBody"
           application/octet-stream:
             schema:
               format: binary
@@ -202,9 +224,13 @@ paths:
             application/json:
               schema:
                 type: string
-          description: OK
-        "201":
           description: The file was uploaded successfully.
+        default:
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Error
       summary: This endpoint uploads a new file to the site.
       tags:
         - Sites
